--- a/ejem.html
+++ b/ejem.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <meta name="description" content="A lightweight autocomplete plugin with no dependencies, written in plain JavaScript.">
+    <link rel="shortcut icon" href="https://pixabay.com/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/yahoo/pure-release/v0.6.0/pure-min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="auto-complete.js">
+    <link rel="stylesheet" href="auto-complete.css">
 </head>
 <body>
     	<div class="contenedor">
@@ -13,9 +20,9 @@
 			</div>
  
 			<nav>
-			    <form>
-			        <a><input type="text" name="Nombre" placeholder="Buscar" required></a>
-			        <a><input type="submit" value="Buscar" id="boton"></a>
+			    <form >
+			        <a><input id="hero-demo" autofocus type="text" name="q" placeholder="Select Title ..." style="color: #333"></a>
+			        <a><input type="submit" value="Buscar" id="boton" style="color: #333"></a>
 			        <a href="#">Guardar Busquesa</a>
 			    </form>
 			</nav>
@@ -59,5 +66,21 @@
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="leer.js"></script>
+  <script src="auto-complete.js"></script>
+    <script>
+        var demo1 = new autoComplete({
+            selector: '#hero-demo',
+            minChars: 1,
+            source: function(term, suggest){
+                term = term.toLowerCase();
+                var choices = ['Devil At The Catacombs', 'Angels Without A Mouth', 'Fish Looking At Me', 'Foreigners And Hunters', 'Zombies And Horses', 'Temptation Hiding From Me', 'Working In My Nightmares', 'Miserable Until The Light', 'Sweating In The Dark', 'Mutant Without A Mouth', 'Butcher At The Catacombs', 'Freaks Who Stare', 'Wives Who Smiles', 'Creatures And Owls', 'Wolves And Colleagues', 'Shadows In My Dreams', 'Shadows In The Crypts', 'Wretched In The Night', 'Rotten In The Light', 'Companion Program', 'Jester Can Dance', 'Angel Without A Voice', 'Serpent Of Stunts', 'Foreigner And Fool', 'Angel And Butcher', 'Whispers Arrangement', 'Spoofs Adventure', 'Impressed By Traditions', 'Weight Of My Sister', 'Harlequin Of Parody', 'Thief From The Mountains', 'Queen Of Parody', 'Horse Can Cook' , 'Buffoon And Soldier', 'Harlequin And Angel' , 'Jokes Stalks Me', 'Gags From The River', 'Delight Of The Truth', 'Hidden By The Idiot', 'Agent Of Stone', 'Bandit Without A Goal', 'Traitors Of Agony', 'Deputies Of Doom', 'Collectors And Friends', 'Couriers And Warriors', 'Chase Of The Stockades', 'Execution Of The Plague', 'Belonging To The Graveyard', 'Dead At The Town', 'Agent Of Stone', 'Bandit Without A Goal', 'Traitors Of Agony', 'Deputies Of Doom', 'Collectors And Friends', 'Couriers And Warriors', 'Chase Of The Stockades', 'Execution Of The Plague', 'Belonging To The Graveyard', 'Dead At The Town'];
+                var suggestions = [];
+                for (i=0;i<choices.length;i++)
+                    if (~choices[i].toLowerCase().indexOf(term)) suggestions.push(choices[i]);
+                suggest(suggestions);
+            }
+        });
+
+    </script>
 </body>
 </html>
